compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_module_for_imported.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport rakun/io\n\npub fn main() {\n  i.println(\"Hello, world!\")\n}\n"
---
----- BEFORE ACTION

import rakun/io

pub fn main() {
  i.println("Hello, world!")
  ▔▔↑                       
}


----- AFTER ACTION

import rakun/io

pub fn main() {
  io.println("Hello, world!")
}
