compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__use_label_shorthand_works_for_nested_record_updates.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1081
expression: "\npub record Wibble { Wibble(arg: Int, arg2: Wobble) }\npub record Wobble { Wobble(arg: Int, arg2: String) }\n\npub fn main() {\n  let arg = 1\n  let arg2 = \"a\"\n  Wibble(..todo, arg2: Wobble(arg: arg, arg2: arg2))\n}\n "
---
----- BEFORE ACTION

pub record Wibble { Wibble(arg: Int, arg2: Wobble) }
pub record Wobble { Wobble(arg: Int, arg2: String) }

pub fn main() {
  let arg = 1
  let arg2 = "a"
  Wibble(..todo, arg2: Wobble(arg: arg, arg2: arg2))
           ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑           
}
 


----- AFTER ACTION

pub record Wibble { Wibble(arg: Int, arg2: Wobble) }
pub record Wobble { Wobble(arg: Int, arg2: String) }

pub fn main() {
  let arg = 1
  let arg2 = "a"
  Wibble(..todo, arg2: Wobble(arg: , arg2: ))
}
